<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageButton
        android:id="@+id/ic_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_menu"
        android:contentDescription="menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categories_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/categories_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@+id/categories_title_text_view">

        <Button
            android:id="@+id/btn_realism"
            android:text="@string/realism_title"
            style="@style/ButtonCategories"/>

        <Button
            android:id="@+id/btn_anime"
            android:text="@string/anime_title"
            style="@style/ButtonCategories"/>

        <Button
            android:id="@+id/btn_manga"
            android:text="@string/manga_title"
            style="@style/ButtonCategories"/>

        <Button
            android:id="@+id/btn_abstraction"
            android:text="@string/abstraction_title"
            style="@style/ButtonCategories"/>

        <Button
            android:id="@+id/btn_vector"
            android:text="@string/vector_graphics_title"
            style="@style/ButtonCategories"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>